Finished up golden butter rice.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <h3>Recipes:</h3>
+        <br>
+        <br>
+        <a href="./recipes/golden-butter-rice.html">Golden Butter Rice</a>
 
 
 
