final commit to make sure

--- a/recipes/golden-butter-rice.html
+++ b/recipes/golden-butter-rice.html
@@ -27,6 +27,7 @@
             <li>1/3 cup chopped walnuts (optional)</li>
             <li>1/3 cup sliced green onions (optional)ll</li>
         </ul>
+        <h4>Steps</h4>
         <ol>
             <li>Melt butter in a pan or pot with a tight-fitting lid over medium heat. As soon as butter starts to bubble, add in ginger, turmeric, cayenne, brown sugar, and salt. Cook, whisking, for 1 minute.</li>
             <li>Add rice, and stir until every grain is coated with butter. Stir in water, and bring to a boil over high heat. As soon as it begins to boil, gently shake and swirl the pan to settle rice into an even layer, then reduce heat to medium-low.</li>
