Added 2 more recipes, added their links to home.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <h3>Recipes:</h3>
         <br>
         <br>
-        <a href="./recipes/golden-butter-rice.html">Golden Butter Rice</a>
+        <a href="./recipes/golden-butter-rice.html" target="_blank" rel="noopener noreferrer">Golden Butter Rice</a>
+        <a href="./recipes/My-mango-lassi.html" target="_blank" rel="noopener noreferrer">My Mango Lassi</a>
+        <a href="./recipes/Air-fryer-samosa.html" target="_blank" rel="noopener noreferrer">Air Fryer Samosa</a>
 
 
 
