added styles to all the pages.

--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
     <head lang="en">
         <meta charset="utf8">
         <title>Homepage</title>
-
+        <link rel="stylesheet" href="./style.css">
 
 
 
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <h3>Recipes:</h3>
+        <h1 class="top1">Odin Recipes</h1>
+        <h3 class="top2">Recipes:</h3>
         <br>
         <br>
-        <a href="./recipes/golden-butter-rice.html" target="_blank" rel="noopener noreferrer">Golden Butter Rice</a>
-        <a href="./recipes/My-mango-lassi.html" target="_blank" rel="noopener noreferrer">My Mango Lassi</a>
-        <a href="./recipes/Air-fryer-samosa.html" target="_blank" rel="noopener noreferrer">Air Fryer Samosa</a>
+        <a class="link" href="./recipes/golden-butter-rice.html" target="_blank" rel="noopener noreferrer">Golden Butter Rice</a>
+        <br>
+        <br>
+        <a class="link" href="./recipes/My-mango-lassi.html" target="_blank" rel="noopener noreferrer">My Mango Lassi</a>
+        <br>
+        <br>
+        <a class="link" href="./recipes/Air-fryer-samosa.html" target="_blank" rel="noopener noreferrer">Air Fryer Samosa</a>
 
 
 
