--- a/recipes/Air-fryer-samosa.html
+++ b/recipes/Air-fryer-samosa.html
@@ -3,19 +3,19 @@
     <head lang="en">
         <meta charset="utf8">
         <title>Air Fryer Samosa</title>
-
+        <link rel="stylesheet" href="./style.css">
 
 
 
     </head>
 
     <body>
-        <h1>Air Fryer Samosa</h1>
-        <img src="pictures/airfryersamosa1200,1797.jpg" width="1200" height="1797" alt="Air Fryer Samosa">
-        <h3>Description</h3>
-        <p>Use your air fryer to make Indian samosas - this version is vegetarian with potatoes and peas but you can cook any samosa in the air fryer.</p>
-        <h4>Ingredients</h4>
-        <ul>
+        <h1 class="top1">Air Fryer Samosa</h1>
+        <img src="pictures/airfryersamosa1200,1797.jpg" width="612" height="auto" alt="Air Fryer Samosa">
+        <h3 class="top2">Description</h3>
+        <p class="desc">Use your air fryer to make Indian samosas - this version is vegetarian with potatoes and peas but you can cook any samosa in the air fryer.</p>
+        <h4 class="top3">Ingredients</h4>
+        <ul class="list">
             <li>12 ounces yukon gold potatoes, peeled and cut into 1-inch pieces</li>
             <li>1 tablespoon extra-virgin olive oil</li>
             <li>1/2 cup chopped onion</li>
@@ -30,8 +30,8 @@
             <li>24 wonton wrappers</li>
             <li>cooking spray</li>
         </ul>
-        <h4>Steps</h4>
-        <ol>
+        <h4 class="top3">Steps</h4>
+        <ol class="list">
             <li>Add potatoes to a small saucepan and cover with salted water; bring to a boil over high heat. Reduce heat and simmer 10 minutes or until fork-tender. Drain and transfer potatoes to a bowl; mash until mostly smooth with a few small chunks remaining.</li>
             <li>In the same saucepan, heat oil over medium heat. Add onion and cook, stirring occasionally, until tender, 3 to 4 minutes. Stir in ginger and garlic; cook until fragrant, about 30 seconds. Add garam masala, cumin, salt, and (if using) cayenne; cook about 30 seconds more. Stir in mashed potatoes and peas; cook until warmed through. Remove from heat; stir in cilantro.</li>
             <li>Arrange wonton wrappers on a clean work surface; evenly spoon filling into centers of wontonwrappers. Lightly wet borders of wrappers with
