--- a/recipes/My-mango-lassi.html
+++ b/recipes/My-mango-lassi.html
@@ -3,19 +3,19 @@
     <head lang="en">
         <meta charset="utf8">
         <title>My Mango Lassi</title>
-
+        <link rel="stylesheet" href="./style.css">
 
 
 
     </head>
 
     <body>
-        <h1>My Mango Lassi</h1>
+        <h1 class="top1">My Mango Lassi</h1>
         <img src="pictures/mangolassi612 408.jpg" width="612" height="408" alt="GOLDEN BUTTER RICE">
-        <h3>Description</h3>
-        <p>Mango lassi is very rich and luxurious drink with yogurt and mangoes. It is the perfect summer drink when served chilled.</p>
-        <h4>Ingredients</h4>
-        <ul>
+        <h3 class="top2">Description</h3>
+        <p class="desc">Mango lassi is very rich and luxurious drink with yogurt and mangoes. It is the perfect summer drink when served chilled.</p>
+        <h4 class="top3">Ingredients</h4>
+        <ul class="list">
             <li>1 ½ cups mangos - peeled, seeded, chopped, and chilled</li>
             <li>1 ½ cups plain yogurt</li>
             <li>½ cup cold milk</li>
@@ -23,8 +23,8 @@
             <li>2 tablespoons confectioners' sugar</li>
             <li>½ teaspoon ground cardamom</li>
         </ul>
-        <h4>Steps</h4>
-        <ol>
+        <h4 class="top3">Steps</h4>
+        <ol class="list">
             <li>Combine mangos, yogurt, milk, cream, confectioners' sugar, and cardamom in a blender; blend until smooth and frothy. Pour into glasses and serve immediately.</li>
         
         </ol>
