--- a/recipes/golden-butter-rice.html
+++ b/recipes/golden-butter-rice.html
@@ -3,19 +3,19 @@
     <head lang="en">
         <meta charset="utf8">
         <title>Golden Butter Rice</title>
-
+        <link rel="stylesheet" href="./style.css">
 
 
 
     </head>
 
     <body>
-        <h1>Golden Butter Rice</h1>
-        <img src="pictures/goldenbutterrice1500*750.jpg" width="1500" height="750" alt="GOLDEN BUTTER RICE">
-        <h3>Description</h3>
-        <p>This golden butter rice, flavored with ginger and turmeric, is a forgotten way of cooking butter rice. It isn't cooked rice with butter stirred in, it really is rice cooked in butter. This is my favorite version, with seasonings inspired by a classic Indian drink called golden milk.</p>
-        <h4>Ingredients</h4>
-        <ul>
+        <h1 class="top1">Golden Butter Rice</h1>
+        <img src="pictures/goldenbutterrice1500*750.jpg" width="612" height="auto" alt="GOLDEN BUTTER RICE">
+        <h3 class="top2">Description</h3>
+        <p class="desc">This golden butter rice, flavored with ginger and turmeric, is a forgotten way of cooking butter rice. It isn't cooked rice with butter stirred in, it really is rice cooked in butter. This is my favorite version, with seasonings inspired by a classic Indian drink called golden milk.</p>
+        <h4 class="top3">Ingredients</h4>
+        <ul class="list">
             <li>1/2 cup unsalted butter</li>
             <li>1 tablespoon finely grated fresh ginger</li>
             <li>1 1/4 teaspoons ground turmeric</li>
@@ -25,10 +25,10 @@
             <li>2 cups basmati rice or other long grain white rice</li>
             <li>3 cups water</li>
             <li>1/3 cup chopped walnuts (optional)</li>
-            <li>1/3 cup sliced green onions (optional)ll</li>
+            <li>1/3 cup sliced green onions (optional)</li>
         </ul>
-        <h4>Steps</h4>
-        <ol>
+        <h4 class="top3">Steps</h4>
+        <ol class="list">
             <li>Melt butter in a pan or pot with a tight-fitting lid over medium heat. As soon as butter starts to bubble, add in ginger, turmeric, cayenne, brown sugar, and salt. Cook, whisking, for 1 minute.</li>
             <li>Add rice, and stir until every grain is coated with butter. Stir in water, and bring to a boil over high heat. As soon as it begins to boil, gently shake and swirl the pan to settle rice into an even layer, then reduce heat to medium-low.</li>
             <li>Cover tightly and simmer for 15 minutes. Turn off heat, and let rest, covered, for 10 minutes. DO NOT lift the lid or try to stir yet.</li>
@@ -36,9 +36,9 @@
 
         
         </ol>
-        <h3>Chef's Note:</h3>
+        <h3 class="top3">Chef's Note:</h3>
         <br>
-        <em>The times given are for basmati rice. If using another long grain white rice, adjust times according to package directions.</em>
+        <em class="desc">The times given are for basmati rice. If using another long grain white rice, adjust times according to package directions.</em>
 
     </body>
 </html>
